Create model options

--- a/Logga.Core/Logga.csproj
+++ b/Logga.Core/Logga.csproj
@@ -135,13 +135,13 @@
     <Compile Include="App_Start\RazorGeneratorMvcStart.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Attributes\ErrorLogFilterAttribute.cs" />
-    <Compile Include="ConnectionConfiguration.cs" />
-    <Compile Include="LoggaService.cs" />
-    <Compile Include="LoggaConfiguration.cs" />
+    <Compile Include="Config\ConnectionConfiguration.cs" />
+    <Compile Include="Config\LoggaService.cs" />
+    <Compile Include="Config\LoggaConfiguration.cs" />
     <Compile Include="Controllers\LoggaController.cs" />
-    <Compile Include="Global.asax.cs">
-      <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
+    <Compile Include="DataBases\UseSqlServer.cs" />
+    <Compile Include="Entities\LoggaEntry.cs" />
+    <Compile Include="Entities\LoggaOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Logga\Details.generated.cs">
       <AutoGen>True</AutoGen>
@@ -160,19 +160,20 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="favicon.ico" />
-    <Content Include="Global.asax" />
+    <Content Include="web.config" />
+    <Content Include="packages.config" />
+    <None Include="web.Debug.config">
+      <DependentUpon>web.config</DependentUpon>
+    </None>
+    <None Include="web.Release.config">
+      <DependentUpon>web.config</DependentUpon>
+    </None>
+    <EmbeddedResource Include="Install\SqlScript.sql" />
+    <Content Include="LoggaIcon.ico" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
-    <Content Include="Web.Debug.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
-    <Content Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml">
@@ -187,20 +188,6 @@
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>Details.generated.cs</LastGenOutput>
     </Content>
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <Content Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Logga.Data.SqlServer\Logga.Data.SqlServer.csproj">
-      <Project>{b884dad5-1752-4a10-8500-27914db6fa4f}</Project>
-      <Name>Logga.Data.SqlServer</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Logga.Data\Logga.Data.csproj">
-      <Project>{fb392211-bd34-4ccb-ab67-fc12a077d73d}</Project>
-      <Name>Logga.Data</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -237,6 +224,12 @@
     </PropertyGroup>
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>REM Create a NuGet package for this project and place the .nupkg file in the project's output directory.
+REM If you see this in Visual Studio's Error List window, check the Output window's Build tab for the actual error.
+ECHO Creating NuGet package in Post-Build event...
+PowerShell -NoProfile -ExecutionPolicy Bypass -Command "&amp; '$(ProjectDir)_CreateNewNuGetPackage\DoNotModify\CreateNuGetPackage.ps1' -ProjectFilePath '$(ProjectPath)' -OutputDirectory '$(TargetDir)' -BuildConfiguration '$(ConfigurationName)' -BuildPlatform '$(PlatformName)'"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
