--- a/Logga.Data/Logga.Data.csproj
+++ b/Logga.Data/Logga.Data.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LoggaEntry.cs" />
+    <Compile Include="LoggaOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
